@@ -88,6 +88,7 @@ class Contact extends Model
         'last_name',
         'nickname',
         'gender_id',
+        'description',
         'account_id',
         'is_partial',
         'job',
